--- a/client/index.html
+++ b/client/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>登陆 - Skyline</title>
-    <link rel="stylesheet" href="../lib/bootstrap.min.css">
-    <link rel="stylesheet" href="../stylesheets/share.css">
-    <link rel="stylesheet" href="../stylesheets/index.css">
-    <link rel="icon" href="../images/icon.png">
+    <link rel="stylesheet" href="lib/bootstrap.min.css">
+    <link rel="stylesheet" href="stylesheets/share.css">
+    <link rel="stylesheet" href="stylesheets/index.css">
+    <link rel="icon" href="images/icon.png">
 </head>
 <body>
 <section class="container">
     <section id="form-area" class="center">
-        <img src="../images/icon.png" alt="ICON" id="icon" class="img-responsive img-rounded">
+        <img src="images/icon.png" alt="ICON" id="icon" class="img-responsive img-rounded">
         <form action="" id="form">
             <span class="glyphicon glyphicon-user form-icon"></span><label class="label-block"><input class="form-control form-input" id="account" placeholder="账号" autofocus></label>
             <span class="glyphicon glyphicon-lock form-icon"></span><label class="label-block"><input type="password" class="form-control form-input" id="password" placeholder="密码"></label>
@@ -21,9 +21,10 @@
     </section>
     <a href="register.html" id="corner-link"><button class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-plus"></span> 注册</button></a>
 </section>
-<script src="../lib/jquery-3.2.1.min.js"></script>
-<script src="../lib/bootstrap.min.js"></script>
-<script src="../scripts/lib.js"></script>
-<script src="../scripts/index.js"></script>
+<script src="lib/jquery-3.2.1.min.js"></script>
+<script src="lib/bootstrap.min.js"></script>
+<script src="lib/md5.min.js"></script>
+<script src="scripts/lib.js"></script>
+<script src="scripts/index.js"></script>
 </body>
 </html>
