--- a/client/room.html
+++ b/client/room.html
@@ -66,19 +66,7 @@
                     <div class="table-row-display" id="dialog-area-row">
                         <div class="table-cell-display" id="dialog-area-cell">
                             <div id="dialog-area">
-                                <div class="table-display" id="message-table">
-                                    <div class="table-row-display message-row">
-                                        <div class="table-cell-display message-avatar-div middle">
-                                            <img src="images/avatars/avatar.png" alt="avatar" class="message-avatar img-circle">
-                                        </div>
-                                        <div class="table-cell-display message-nickname middle">°若灵™</div>
-                                        <span class="table-cell-display middle colon">:</span>
-                                        <div class="table-cell-display message middle">
-                                            哈哈哈哈
-                                        </div>
-                                        <div class="table-cell-display message-time middle">17点07分</div>
-                                    </div>
-                                </div>
+                                <div class="table-display" id="message-table"><!--User messages here--></div>
                             </div>
                         </div>
                     </div>
