--- a/client/room.html
+++ b/client/room.html
@@ -114,7 +114,7 @@
                     <textarea name="dialog" id="dialog-textarea" placeholder="输入你想说的话吧，最多50字哦~"
                               class="form-control" autofocus></textarea>
                                 <span id="message-length-span" class="label label-primary"></span>
-                                <button type="submit" class="btn btn-primary" id="dialog-submit-btn" disabled>
+                                <button type="submit" class="btn btn-primary" id="dialog-submit-button" disabled>
                                     <span class="glyphicon glyphicon-send"></span> 发送
                                 </button>
                             </form>
