--- a/client/room.html
+++ b/client/room.html
@@ -225,7 +225,7 @@
 <script src="lib/jquery-3.2.1.min.js"></script>
 <script src="lib/bootstrap.min.js"></script>
 <script src="lib/socket.io.js"></script>
-<script src="scripts/lib.js"></script>
-<script src="scripts/room.js"></script>
+<script src="scripts/compiled/lib.js"></script>
+<script src="scripts/compiled/room.js"></script>
 </body>
 </html>
