--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,7 @@
 <script src="lib/jquery-3.2.1.min.js"></script>
 <script src="lib/bootstrap.min.js"></script>
 <script src="lib/md5.min.js"></script>
-<script src="scripts/lib.js"></script>
-<script src="scripts/index.js"></script>
+<script src="scripts/compiled/lib.js"></script>
+<script src="scripts/compiled/index.js"></script>
 </body>
 </html>
