--- a/client/register.html
+++ b/client/register.html
@@ -51,7 +51,7 @@
 <script src="lib/jquery-3.2.1.min.js"></script>
 <script src="lib/bootstrap.min.js"></script>
 <script src="lib/md5.min.js"></script>
-<script src="scripts/lib.js"></script>
-<script src="scripts/register.js"></script>
+<script src="scripts/compiled/lib.js"></script>
+<script src="scripts/compiled/register.js"></script>
 </body>
 </html>
