--- a/client/room.html
+++ b/client/room.html
@@ -21,7 +21,7 @@
                         <span class="glyphicon glyphicon-ok" id="status-icon"></span>
                         <span role="button" data-toggle="dropdown" aria-haspopup="true"
                               aria-expanded="true" id="switch-status-btn">
-                            <span id="nickname">°若灵™</span>
+                            <span id="nickname"><!--nickname here--></span>
                             <span class="caret"></span>
                         </span>
                         <ul class="dropdown-menu" aria-labelledby="switch-status-btn">
