switch libraries to CDN

--- a/client/room.html
+++ b/client/room.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>聊天室 - Skyline</title>
-    <link rel="stylesheet" href="lib/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="stylesheets/share.css">
     <link rel="stylesheet" href="stylesheets/room.css">
     <link rel="icon" href="images/icon.png">
@@ -222,9 +222,9 @@
     </div>
 </div>
 
-<script src="lib/jquery-3.2.1.min.js"></script>
-<script src="lib/bootstrap.min.js"></script>
-<script src="lib/socket.io.js"></script>
+<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://cdn.bootcss.com/socket.io/2.0.3/socket.io.js"></script>
 <script src="scripts/compiled/lib.js"></script>
 <script src="scripts/compiled/room.js"></script>
 </body>
