--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>登陆 - Skyline</title>
-    <link rel="stylesheet" href="lib/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="stylesheets/share.css">
     <link rel="stylesheet" href="stylesheets/index.css">
     <link rel="icon" href="images/icon.png">
@@ -21,8 +21,8 @@
     </section>
     <a href="register.html" id="corner-link"><button class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-plus"></span> 注册</button></a>
 </section>
-<script src="lib/jquery-3.2.1.min.js"></script>
-<script src="lib/bootstrap.min.js"></script>
+<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="lib/md5.min.js"></script>
 <script src="scripts/compiled/lib.js"></script>
 <script src="scripts/compiled/index.js"></script>
