--- a/client/register.html
+++ b/client/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>注册 - Skyline</title>
-    <link rel="stylesheet" href="lib/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="stylesheets/share.css">
     <link rel="stylesheet" href="stylesheets/register.css">
     <link rel="icon" href="images/icon.png">
@@ -48,8 +48,8 @@
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
-<script src="lib/jquery-3.2.1.min.js"></script>
-<script src="lib/bootstrap.min.js"></script>
+<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="lib/md5.min.js"></script>
 <script src="scripts/compiled/lib.js"></script>
 <script src="scripts/compiled/register.js"></script>
