--- a/client/room.html
+++ b/client/room.html
@@ -81,10 +81,10 @@
                                             <span class="glyphicon glyphicon-font"> </span> <span class="caret"></span>
                                         </button>
                                         <ul class="dropdown-menu">
-                                            <li><a class="font-style" href="" style="font-family: '宋体',serif;">宋体</a></li>
-                                            <li><a class="font-style" href="" style="font-family: '微软雅黑',serif;">微软雅黑</a></li>
-                                            <li><a class="font-style" href="" style="font-family: '楷体',serif;">楷体</a></li>
-                                            <li><a class="font-style" href="" style="font-family: '仿宋',serif;">仿宋</a></li>
+                                            <li><a class="font-style" id="song" href="">宋体</a></li>
+                                            <li><a class="font-style" id="msyh" href="">微软雅黑</a></li>
+                                            <li><a class="font-style" id="kai" href="">楷体</a></li>
+                                            <li><a class="font-style" id="fangSong" href="">仿宋</a></li>
                                         </ul>
                                     </div>
                                     <button class="btn btn-primary btn-sm" id="bold-btn">
